se corrigió la grilla del footer en dispositivos medianos y se agrego el destino de la lupa del buscador del navbar

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -51,9 +51,9 @@
           <div class="collapse navbar-collapse" id="navbar">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <form class="me-3 d-flex" role="search">
-                <button class="btn btn-outline-primary me-2" type="submit">
+                <a href="../pages/error404.html" class="btn btn-outline-primary me-2">
                   <i class="bi bi-search"></i>
-                </button>
+                </a>
                 <input
                   class="form-control me-3"
                   type="search"
@@ -181,7 +181,7 @@
         <div class="container">
           <div class="row">
             <div
-              class="col-12 col-md-4 col-lg-3 d-flex gap-3 align-items-center mb-4 justify-content-center justify-content-md-start"
+              class="col-12 col-md-6 col-lg-3 d-flex gap-3 align-items-center mb-4 justify-content-center justify-content-md-start"
             >
               <a
                 href="../index.html"
@@ -190,10 +190,10 @@
                 <img
                   src="../img/EH1.png"
                   alt="icono"
-                  class="img-fluid imgfoot"
+                  class="img-fluid imgfoot ms-5"
               /></a>
             </div>
-            <div class="col-12 col-md-4 col-lg-3 text-light">
+            <div class="col-12 col-md-6 col-lg-3 text-light">
               <ul class="list-unstyled text-center">
                 <h4 class="text-dark">Información</h4>
                 <li class="mb-1">
@@ -226,7 +226,7 @@
                 </li>
               </ul>
             </div>
-            <div class="col-12 col-md-4 col-lg-3 text-light">
+            <div class="col-12 col-md-6 col-lg-3 text-light">
               <ul class="list-unstyled text-center fs-5">
                 <h4 class="text-dark">Redes Sociales</h4>
                 <li class="mb-1">
@@ -260,7 +260,7 @@
                 </li>
               </ul>
             </div>
-            <div class="col-12 col-md-4 col-lg-3 text-light">
+            <div class="col-12 col-md-6 col-lg-3 text-light">
               <ul class="list-unstyled text-center">
                 <h4 class="text-dark">Metodos de Pago</h4>
                 <li class="mb-2 mt-2">
