--- a/pages/celulares.html
+++ b/pages/celulares.html
@@ -78,9 +78,9 @@
           <div class="collapse navbar-collapse" id="navbar">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <form class="me-3 d-flex" role="search">
-                <button class="btn btn-outline-primary me-2" type="submit">
+                <a href="../pages/error404.html" class="btn btn-outline-primary me-2">
                   <i class="bi bi-search"></i>
-                </button>
+                </a>
                 <input
                   class="form-control me-3"
                   type="search"
@@ -349,16 +349,16 @@
       <div class="container">
         <div class="row">
           <div
-            class="col-12 col-md-4 col-lg-3 d-flex gap-3 align-items-center mb-4 justify-content-center justify-content-md-start"
+            class="col-12 col-md-6 col-lg-3 d-flex gap-3 align-items-center mb-4 justify-content-center justify-content-md-start"
           >
             <a
               href="../index.html"
               class="link-underline-opacity-0 d-flex align-items-center gap-2"
             >
-              <img src="../img/EH1.png" alt="icono" class="img-fluid imgfoot"
+              <img src="../img/EH1.png" alt="icono" class="img-fluid imgfoot ms-5"
             /></a>
           </div>
-          <div class="col-12 col-md-4 col-lg-3 text-light">
+          <div class="col-12 col-md-6 col-lg-3 text-light">
             <ul class="list-unstyled text-center">
               <h4 class="text-dark">Información</h4>
               <li class="mb-1">
@@ -391,7 +391,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-12 col-md-4 col-lg-3 text-light">
+          <div class="col-12 col-md-6 col-lg-3 text-light">
             <ul class="list-unstyled text-center fs-5">
               <h4 class="text-dark">Redes Sociales</h4>
               <li class="mb-1">
@@ -425,7 +425,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-12 col-md-4 col-lg-3 text-light">
+          <div class="col-12 col-md-6 col-lg-3 text-light">
             <ul class="list-unstyled text-center">
               <h4 class="text-dark">Metodos de Pago</h4>
               <li class="mb-2 mt-2">
