Agregado de efectos a crads e imagenes

--- a/index.html
+++ b/index.html
@@ -239,151 +239,178 @@
       <!-- Grilla -->
       <section class="container my-5">
         <div class="row row-gap-3">
-          <h2 class="display-1">
+          <h2 class="display-3 bg-dark-subtle rounded-4 py-1 shadow">
             <b><i class="bi bi-chevron-double-right"></i> Audio y TV</b>
           </h2>
           <div class="col-12 col-md-6 col-lg-4">
-            <div class="card colorFondoGrilla rounded-4 h-100">
+            <div class="card colorFondoGrilla rounded-2 h-100 shadow div-efect">
               <img
                 src="./img/AudioTv/monitor led gadnic 27 pulg.jpg"
                 class="card-img-top alturaImgGrilla"
+                loading="lazy"
                 alt="televisor Gadnic 27 pulgadas"
               />
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
                 <p class="card-text">
-                  Monitor LED Gadnic 27 pulgadas Alta Resolución
+                  Monitor LED Gadnic 27 pulg. Alta Resolución
                 </p>
-                <a href="./pages/error404.html" class="btn btn-primary btn-error botonerror text-light"
+                <a
+                  href="./pages/error404.html"
+                  class="btn btn-primary text-light shadow"
                   ><b>Visitar</b></a
                 >
               </div>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
-            <div class="card colorFondoGrilla rounded-4 h-100">
+            <div class="card colorFondoGrilla rounded-2 h-100 shadow div-efect">
               <img
                 src="./img/AudioTv/televisor 52 pulg.webp"
                 class="card-img-top alturaImgGrilla"
+                loading="lazy"
                 alt="televisor 52 pulg noblex"
               />
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
-                <p class="card-text">Monitor LED de 43 pulgadas-Noblex</p>
-                <a href="./pages/tv1.html" class="btn btn-primary btn-error botonerror text-light"
+                <p class="card-text">Monitor LED de 43 pulg. Noblex</p>
+                <a
+                  href="./pages/tv1.html"
+                  class="btn btn-primary text-light shadow"
                   ><b>Visitar</b></a
                 >
               </div>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
-            <div class="card colorFondoGrilla rounded-4 h-100">
+            <div class="card colorFondoGrilla rounded-2 h-100 shadow div-efect">
               <img
                 src="./img/AudioTv/tv 80 pulgadas.webp"
                 class="card-img-top alturaImgGrilla"
+                loading="lazy"
                 alt="televisor pantalla curva 80 pulgadas Samsung"
               />
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
-                <p class="card-text">Pantalla curva, Samsung 80 pulgadas</p>
-                <a href="./pages/error404.html" class="btn btn-primary btn-error botonerror text-light"
+                <p class="card-text">Pantalla curva, Samsung 80 pulg.</p>
+                <a
+                  href="./pages/error404.html"
+                  class="btn btn-primary text-light shadow"
                   ><b>Visitar</b></a
                 >
               </div>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
-            <div class="card colorFondoGrilla rounded-4 h-100">
+            <div class="card colorFondoGrilla rounded-2 h-100 shadow div-efect">
               <img
                 src="./img/AudioTv/Smart-Tv-32-FullHD-TCL-L32S5400-Frameless-Android-TV-1.webp"
                 class="card-img-top alturaImgGrilla"
+                loading="lazy"
                 alt="Televisor con pantalla a
               colores 32 pulagadas TCL"
               />
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
-                <p class="card-text">Full TV 32 pulgadas HD TCL L32S5400</p>
-                <a href="./pages/error404.html" class="btn btn-primary btn-error botonerror text-light"
+                <p class="card-text">Full TV 32 pulg. HD TCL L32S5400</p>
+                <a
+                  href="./pages/error404.html"
+                  class="btn btn-primary text-light shadow"
                   ><b>Visitar</b></a
                 >
               </div>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
-            <div class="card colorFondoGrilla rounded-4 h-100">
+            <div class="card colorFondoGrilla rounded-2 h-100 shadow div-efect">
               <img
                 src="./img/AudioTv/tv pantalla curva.webp"
                 class="card-img-top alturaImgGrilla"
+                loading="lazy"
                 alt="televisor pantalla curva Samsung 49 pulgadas"
               />
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
-                <p class="card-text">Monitor Curvo 49 pulgadas Samsung</p>
-                <a href="./pages/error404.html" class="btn btn-primary btn-error botonerror text-light"
+                <p class="card-text">Monitor Curvo 49 pulg. Samsung</p>
+                <a
+                  href="./pages/error404.html"
+                  class="btn btn-primary text-light shadow"
                   ><b>Visitar</b></a
                 >
               </div>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
-            <div class="card colorFondoGrilla rounded-4 h-100">
+            <div class="card colorFondoGrilla rounded-2 h-100 shadow div-efect">
               <img
                 src="./img/AudioTv/parlante jbl rojo.jpg"
                 class="card-img-top alturaImgGrilla tamanoImag"
+                loading="lazy"
                 alt="parlante jbl rojo"
               />
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Parlantes</b></h3>
                 <p class="card-text">Parlante JBL, bluetooth, portatil</p>
-                <a href="./pages/error404.html" class="btn btn-primary btn-error botonerror text-light"
+                <a
+                  href="./pages/error404.html"
+                  class="btn btn-primary text-light shadow"
                   ><b>Visitar</b></a
                 >
               </div>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
-            <div class="card colorFondoGrilla rounded-4 h-100">
+            <div class="card colorFondoGrilla rounded-2 h-100 shadow div-efect">
               <img
                 src="./img/AudioTv/parlante bose.webp"
                 class="card-img-top alturaImgGrilla"
+                loading="lazy"
                 alt="parlante bose blanco"
               />
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Parlantes</b></h3>
                 <p class="card-text">Parlante Bose Soundlink Flex blanco</p>
-                <a href="./pages/error404.html" class="btn btn-primary btn-error botonerror text-light"
+                <a
+                  href="./pages/error404.html"
+                  class="btn btn-primary text-light shadow"
                   ><b>Visitar</b></a
                 >
               </div>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
-            <div class="card colorFondoGrilla rounded-4 h-100">
+            <div class="card colorFondoGrilla rounded-2 h-100 shadow div-efect">
               <img
                 src="./img/AudioTv/home teatre2.jpg"
                 class="card-img-top alturaImgGrilla"
+                loading="lazy"
                 alt="home theater bose"
               />
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Audio</b></h3>
                 <p class="card-text">Home Theater System Bose 3.1</p>
-                <a href="./pages/error404.html" class="btn btn-primary btn-error botonerror text-light"
+                <a
+                  href="./pages/error404.html"
+                  class="btn btn-primary text-light shadow"
                   ><b>Visitar</b></a
                 >
               </div>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
-            <div class="card colorFondoGrilla rounded-4 h-100">
+            <div class="card colorFondoGrilla rounded-2 h-100 shadow div-efect">
               <img
                 src="./img/AudioTv/parlante portatil2.webp"
                 class="card-img-top alturaImgGrilla"
+                loading="lazy"
                 alt="parlante stromberg"
               />
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Parlantes</b></h3>
                 <p class="card-text">Parlante portatil Stromberg 110</p>
-                <a href="./pages/error404.html" class="btn btn-primary btn-error botonerror text-light"
+                <a
+                  href="./pages/error404.html"
+                  class="btn btn-primary text-light shadow"
                   ><b>Visitar</b></a
                 >
               </div>
@@ -394,7 +421,7 @@
       <!-- fin grilla -->
       <!-- Heladeras + celulares con publicidades -->
       <section class="container my-5">
-        <h2 class="display-1">
+        <h2 class="display-3 bg-dark-subtle rounded-4 py-1 shadow">
           <b><i class="bi bi-chevron-double-right"></i> Heladeras</b>
         </h2>
         <!-- grilla heladeras -->
@@ -402,8 +429,8 @@
           <div class="p-3">
             <img
               src="./img/Heladeras/muchas heladeras.webp"
-              alt="muchos modelos de heladeras"
-              class="img-fluid rounded-5"
+              alt="muchos modelos de heladeras" loading="lazy"
+              class="img-fluid rounded-3 shadow"
             />
           </div>
           <div class="text-center d-none d-md-block">
@@ -420,22 +447,22 @@
         <!-- Grilla publicidades -->
         <article class="container my-5">
           <div class="row">
-            <div class="border col-12 col-md-6 col-lg-6 p-0">
-              <div class="card">
+            <div class="border col-12 col-md-6 col-lg-6 p-0 shadow">
+              <div class="card shadow">
                 <img
                   src="./img/publicidades/freidora aire.jpg"
-                  class="card-img-top"
+                  class="card-img-top" loading="lazy"
                   alt="black friday freidora de aire"
                 />
               </div>
             </div>
             <div class="border col-12 col-md-6 col-lg-6 d-none d-md-block p-0">
               <div
-                class="card container d-flex justify-content-center align-items-center w-100 h-100 p-0"
+                class="card shadow container d-flex justify-content-center align-items-center w-100 h-100 p-0"
               >
                 <img
                   src="./img/publicidades/tarjetas de credito.jpg"
-                  class="card-img-top publiPadre w-100 h-100"
+                  class="card-img-top publiPadre w-100 h-100" loading="lazy"
                   alt="tres tarjetas de credito"
                 />
                 <p
@@ -448,15 +475,15 @@
           </div>
         </article>
         <!-- Grilla celulares -->
-        <h2 class="display-1">
+        <h2 class="display-3 bg-dark-subtle rounded-4 py-1 shadow">
           <b><i class="bi bi-chevron-double-right"></i> Celulares</b>
         </h2>
         <article class="container text-center">
           <div class="py-3">
             <img
               src="./img/celulares/muchos celulares2.jpg"
-              alt="muchos celulares"
-              class="img-fluid rounded-5"
+              alt="muchos celulares" loading="lazy"
+              class="img-fluid rounded-3 shadow"
             />
           </div>
           <div class="text-center d-none d-md-block">
