--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
             <strong class="mt-1 ms-2 fs-3 logo">ElectroHouse</strong>
           </a>
           <!--Carrito en dispositivos pequeños-->
-          <a href="./pages/carrito.html" class="d-lg-none ms-1 me-4 position-relative">
+          <a
+            href="./pages/carrito.html"
+            class="d-lg-none ms-1 me-4 position-relative"
+          >
             <i class="bi bi-cart3 carrito"></i>
             <span
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
@@ -56,7 +59,7 @@
               <span class="visually-hidden">productos en el carrito</span>
             </span>
           </a>
-          
+
           <button
             class="navbar-toggler"
             type="button"
@@ -71,7 +74,10 @@
           <div class="collapse navbar-collapse" id="navbar">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <form class="me-3 d-flex" role="search">
-                <a href="./pages/error404.html" class="btn btn-outline-primary me-2">
+                <a
+                  href="./pages/error404.html"
+                  class="btn btn-outline-primary me-2"
+                >
                   <i class="bi bi-search"></i>
                 </a>
                 <input
@@ -82,18 +88,16 @@
                 />
               </form>
               <li class="nav-item">
-                <a
-                  class="nav-link me-5"
-                  href="./index.html"
-                  >Inicio</a
-                >
+                <a class="nav-link mx-3" href="./index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link me-5" href="./pages/error404.html">Novedades</a>
+                <a class="nav-link mx-3" href="./pages/error404.html"
+                  >Novedades</a
+                >
               </li>
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link me-4 dropdown-toggle"
+                  class="nav-link mx-3 dropdown-toggle"
                   href="#"
                   id="menudropdown"
                   role="button"
@@ -103,9 +107,14 @@
                 >
                 <ul class="dropdown-menu" aria-labelledby="menudropdown">
                   <li>
-                    <a class="dropdown-item" href="./pages/login.html"
-                      ><i class="bi bi-caret-right"></i> Login</a
+                    <a
+                      class="dropdown-item"
+                      href="#"
+                      data-bs-toggle="modal"
+                      data-bs-target="#miModal"
                     >
+                      <i class="bi bi-caret-right"></i> Login
+                    </a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="./pages/registro.html"
@@ -122,7 +131,10 @@
             </ul>
           </div>
           <!--Carrito en pantallas large-->
-          <a href="./pages/carrito.html" class="ms-4 d-none d-lg-block me-4 position-relative">
+          <a
+            href="./pages/carrito.html"
+            class="ms-4 d-none d-lg-block me-4 position-relative"
+          >
             <i class="bi bi-cart3 carrito"></i>
             <span
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
@@ -429,7 +441,8 @@
           <div class="p-3">
             <img
               src="./img/Heladeras/muchas heladeras.webp"
-              alt="muchos modelos de heladeras" loading="lazy"
+              alt="muchos modelos de heladeras"
+              loading="lazy"
               class="img-fluid rounded-3 shadow"
             />
           </div>
@@ -439,7 +452,10 @@
             </p>
           </div>
           <div>
-            <a href="./pages/heladeras.html" class="btn btn-primary btn-error botonerror text-light">
+            <a
+              href="./pages/heladeras.html"
+              class="btn btn-primary btn-error botonerror text-light"
+            >
               <b>Buscá la tuya</b>
             </a>
           </div>
@@ -451,7 +467,8 @@
               <div class="card shadow">
                 <img
                   src="./img/publicidades/freidora aire.jpg"
-                  class="card-img-top" loading="lazy"
+                  class="card-img-top"
+                  loading="lazy"
                   alt="black friday freidora de aire"
                 />
               </div>
@@ -462,7 +479,8 @@
               >
                 <img
                   src="./img/publicidades/tarjetas de credito.jpg"
-                  class="card-img-top publiPadre w-100 h-100" loading="lazy"
+                  class="card-img-top publiPadre w-100 h-100"
+                  loading="lazy"
                   alt="tres tarjetas de credito"
                 />
                 <p
@@ -482,7 +500,8 @@
           <div class="py-3">
             <img
               src="./img/celulares/muchos celulares2.jpg"
-              alt="muchos celulares" loading="lazy"
+              alt="muchos celulares"
+              loading="lazy"
               class="img-fluid rounded-3 shadow"
             />
           </div>
@@ -492,123 +511,234 @@
             </p>
           </div>
           <div>
-            <a href="./pages/celulares.html" class="btn btn-primary btn-error botonerror text-light">
-              <b>Buscalo!</b> 
+            <a
+              href="./pages/celulares.html"
+              class="btn btn-primary btn-error botonerror text-light"
+            >
+              <b>Buscalo!</b>
             </a>
           </div>
         </article>
       </section>
-    </main>
-    <footer class="bg-primary-subtle pt-5 py-3 text-center text-md-start">
-        <div class="container">
-          <div class="row">
-            <div class="col-12 col-md-6 col-lg-3 d-flex gap-3 align-items-center mb-4 justify-content-center justify-content-md-start"
-            >
-              <a
-                href="./index.html"
-                class="link-underline-opacity-0 d-flex align-items-center gap-2"
-              >
-                <img
-                  src="./img/EH1.png"
-                  alt="icono"
-                  class="img-fluid imgfoot ms-5"
-              /></a>
-            </div>
-            <div class="col-12 col-md-6 col-lg-3 text-light">
-              <ul class="list-unstyled text-center">
-                <h4 class="text-dark">Información</h4>
-                <li class="mb-1">
-                  <a
-                    href="./pages/nosotros.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    >Acerca de nosotros</a
-                  >
-                </li>
-                <li class="mb-1">
-                  <a
-                    href="./pages/error404.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    >Servicio al cliente</a
-                  >
-                </li>
-                <li class="mb-1">
-                  <a
-                    href="./pages/error404.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    >Terminos y condiciones</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./pages/error404.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    >Politicas de privacidad</a
-                  >
-                </li>
-              </ul>
-            </div>
-            <div class="col-12 col-md-6 col-lg-3 text-light">
-              <ul class="list-unstyled text-center fs-5">
-                <h4 class="text-dark">Redes Sociales</h4>
-                <li class="mb-1">
-                  <a
-                    href="./pages/error404.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
-                    ><i class="bi bi-facebook text-primary"></i> Facebook</a
-                  >
-                </li>
-                <li class="mb-1">
-                  <a
-                    href="./pages/error404.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
-                    ><i class="bi bi-whatsapp text-success"></i> Whatsapp</a
-                  >
-                </li>
-                <li class="mb-1">
-                  <a
-                    href="./pages/error404.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
-                    ><i class="bi bi-instagram text-danger"></i> Instagram</a
-                  >
-                </li>
-                <li class="mb-1">
-                  <a
-                    href="./pages/error404.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
-                    ><i class="bi bi-linkedin text-primary-emphasis"></i>
-                    Linkedin</a
-                  >
-                </li>
-              </ul>
-            </div>
-            <div class="col-12 col-md-6 col-lg-3 text-light">
-              <ul class="list-unstyled text-center">
-                <h4 class="text-dark">Metodos de Pago</h4>
-                <li class="mb-2 mt-2">
-                  <a
-                    href="./pages/error404.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    ><img
-                      src="https://img.icons8.com/?size=100&id=Sq0VNi1Afgmj&format=png&color=000000"
-                      alt="icono"
-                      class="img-fluid me-2 iconoMC"
-                  /></a>
-                </li>
-                <li>
-                  <a
-                    href="./pages/error404.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    ><img
-                      src="https://img.icons8.com/?size=100&id=11079&format=png&color=000000"
-                      alt="icono"
-                      class="img-fluid me-2 iconoVisa"
-                  /></a>
-                </li>
-              </ul>
+
+      <section>
+        <!-- Modal Login -->
+        <div
+          class="modal fade"
+          id="miModal"
+          tabindex="-1"
+          aria-labelledby="modalLoginLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <!-- Encabezado del modal -->
+              <div class="modal-header">
+                <h5 class="modal-title" id="modalLoginLabel">Iniciar sesión</h5>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Cerrar"
+                ></button>
+              </div>
+
+              <!-- Cuerpo del modal -->
+              <div class="modal-body">
+                <div class="card shadow p-4 rounded-4">
+                  <form>
+                    <!-- Email -->
+                    <div class="mb-3">
+                      <label for="email" class="form-label"
+                        >Correo electrónico</label
+                      >
+                      <input
+                        type="email"
+                        class="form-control"
+                        id="email"
+                        name="email"
+                        placeholder="correo@mail.com"
+                        maxlength="50"
+                        pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
+                        title="Ingresa un correo válido. Ej: ejemplo@mail.com"
+                        autocomplete="email"
+                        required
+                      />
+                    </div>
+
+                    <!-- Contraseña -->
+                    <div class="mb-3">
+                      <label for="password" class="form-label"
+                        >Contraseña</label
+                      >
+                      <input
+                        type="password"
+                        class="form-control"
+                        id="password"
+                        name="password"
+                        placeholder="Contraseña"
+                        minlength="8"
+                        maxlength="20"
+                        pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{8,}$"
+                        title="Debe tener al menos 8 caracteres, una letra, un número y un símbolo"
+                        autocomplete="current-password"
+                        required
+                      />
+                    </div>
+
+                    <!-- Link de recuperación -->
+                    <div class="mb-3 text-end">
+                      <a
+                        href="./pages/error404.html"
+                        class="text-decoration-none"
+                      >
+                        ¿Olvidaste tu contraseña?
+                      </a>
+                    </div>
+
+                    <!-- Botón de inicio de sesión -->
+                    <div class="d-grid">
+                      <button type="submit" class="btn btn-facebook my-1">
+                        Iniciar sesión
+                      </button>
+                      <button type="submit" class="btn btn-facebook my-1">
+                        Iniciar sesión con Google <i class="bi bi-google"></i>
+                      </button>
+                      <button type="submit" class="btn btn-facebook my-1">
+                        Iniciar sesión con Facebook
+                        <i class="bi bi-facebook"></i>
+                      </button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+
+              <!-- Pie del modal-->
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Cancelar
+                </button>
+              </div>
             </div>
           </div>
         </div>
-        <p class="text-center mt-5">&copy;Todos los derechos reservados</p>
+      </section>
+    </main>
+    <footer class="bg-primary-subtle pt-5 py-3 text-center text-md-start">
+      <div class="container">
+        <div class="row">
+          <div
+            class="col-12 col-md-6 col-lg-3 d-flex gap-3 align-items-center mb-4 justify-content-center justify-content-md-start"
+          >
+            <a
+              href="./index.html"
+              class="link-underline-opacity-0 d-flex align-items-center gap-2"
+            >
+              <img
+                src="./img/EH1.png"
+                alt="icono"
+                class="img-fluid imgfoot ms-5"
+            /></a>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 text-light">
+            <ul class="list-unstyled text-center">
+              <h4 class="text-dark">Información</h4>
+              <li class="mb-1">
+                <a
+                  href="./pages/nosotros.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  >Acerca de nosotros</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  href="./pages/error404.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  >Servicio al cliente</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  href="./pages/error404.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  >Terminos y condiciones</a
+                >
+              </li>
+              <li>
+                <a
+                  href="./pages/error404.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  >Politicas de privacidad</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 text-light">
+            <ul class="list-unstyled text-center fs-5">
+              <h4 class="text-dark">Redes Sociales</h4>
+              <li class="mb-1">
+                <a
+                  href="./pages/error404.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
+                  ><i class="bi bi-facebook text-primary"></i> Facebook</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  href="./pages/error404.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
+                  ><i class="bi bi-whatsapp text-success"></i> Whatsapp</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  href="./pages/error404.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
+                  ><i class="bi bi-instagram text-danger"></i> Instagram</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  href="./pages/error404.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
+                  ><i class="bi bi-linkedin text-primary-emphasis"></i>
+                  Linkedin</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 text-light">
+            <ul class="list-unstyled text-center">
+              <h4 class="text-dark">Metodos de Pago</h4>
+              <li class="mb-2 mt-2">
+                <a
+                  href="./pages/error404.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  ><img
+                    src="https://img.icons8.com/?size=100&id=Sq0VNi1Afgmj&format=png&color=000000"
+                    alt="icono"
+                    class="img-fluid me-2 iconoMC"
+                /></a>
+              </li>
+              <li>
+                <a
+                  href="./pages/error404.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  ><img
+                    src="https://img.icons8.com/?size=100&id=11079&format=png&color=000000"
+                    alt="icono"
+                    class="img-fluid me-2 iconoVisa"
+                /></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <p class="text-center mt-5">&copy;Todos los derechos reservados</p>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
