Agregado efecto en crads de heladesras y cellulares. y agregado de modal login

--- a/pages/celulares.html
+++ b/pages/celulares.html
@@ -143,7 +143,7 @@
       </nav>
     </header>
     <main>
-      <h2 class="display-1 py-5">
+      <h2 class="display-3 py-5">
         <b><i class="bi bi-chevron-double-right"></i> Celulares</b>
       </h2>
       <!-- Video -->
@@ -153,12 +153,12 @@
         </video>
       </article>
       <!-- grilla -->
-      <section class="container my-2">
+      <section class="container my-4">
         <div class="row row-gap-3 d-flex justify-content-evenly">
           <!-- 1 -->
           <div class="col-12 col-md-4 col-lg-3">
             <div
-              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
+              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column shadow div-efect"
             >
               <img
                 src="../img/productos/Samsung-Zflip5.jpg"
@@ -184,7 +184,7 @@
           <!-- 2 -->
           <div class="col-12 col-md-4 col-lg-3">
             <div
-              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
+              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column shadow div-efect"
             >
               <img
                 src="../img/celulares/tcl.webp"
@@ -210,7 +210,7 @@
           <!-- 3 -->
           <div class="col-12 col-md-4 col-lg-3">
             <div
-              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
+              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column shadow div-efect"
             >
               <img
                 src="../img/celulares/2 motorola.jpg"
@@ -236,7 +236,7 @@
           <!-- 4 -->
           <div class="col-12 col-md-4 col-lg-3">
             <div
-              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
+              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column shadow div-efect"
             >
               <img
                 src="../img/celulares/motorola e22.jpg"
@@ -262,7 +262,7 @@
           <!-- 5 -->
           <div class="col-12 col-md-4 col-lg-3">
             <div
-              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
+              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column shadow div-efect"
             >
               <img
                 src="../img/celulares/Samsung Galaxy A35.jpg"
@@ -288,7 +288,7 @@
           <!-- 6 -->
           <div class="col-12 col-md-4 col-lg-3">
             <div
-              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
+              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column shadow div-efect"
             >
               <img
                 src="../img/celulares/motorola_moto_g14_gris_01_l.jpg"
