--- a/pages/heladeras.html
+++ b/pages/heladeras.html
@@ -103,9 +103,14 @@
                 >
                 <ul class="dropdown-menu" aria-labelledby="menudropdown">
                   <li>
-                    <a class="dropdown-item" href="../pages/login.html"
-                      ><i class="bi bi-caret-right"></i> Login</a
+                    <a
+                      class="dropdown-item"
+                      href="#"
+                      data-bs-toggle="modal"
+                      data-bs-target="#miModal"
                     >
+                      <i class="bi bi-caret-right"></i> Login
+                    </a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="../pages/registro.html"
@@ -135,7 +140,7 @@
       </nav>
     </header>
     <main>
-      <h2 class="display-1 py-5">
+      <h2 class="display-3 py-5">
         <b><i class="bi bi-chevron-double-right"></i> Heladeras</b>
       </h2>
       <!-- Video -->
@@ -157,11 +162,11 @@
           <!-- 1 -->
           <div class="col-12 col-md-4 col-lg-3">
             <div
-              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
+              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column shadow div-efect"
             >
               <img
                 src="../img/Heladeras/heladera blanca.jpg"
-                class="card-img-top"
+                class="card-img-top" loading="lazy"
                 alt="heladera gafa"
               />
               <div
@@ -185,7 +190,7 @@
           <!-- 2 -->
           <div class="col-12 col-md-4 col-lg-3">
             <div
-              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
+              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column shadow div-efect"
             >
               <img
                 src="../img/Heladeras/hisense.jpg"
@@ -213,7 +218,7 @@
           <!-- 3 -->
           <div class="col-12 col-md-4 col-lg-3">
             <div
-              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
+              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column shadow div-efect"
             >
               <img
                 src="../img/Heladeras/dreammmm.jpg"
@@ -241,7 +246,7 @@
           <!-- 4 -->
           <div class="col-12 col-md-4 col-lg-3">
             <div
-              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
+              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column shadow div-efect"
             >
               <img
                 src="../img/Heladeras/lg.avif"
@@ -269,7 +274,7 @@
           <!-- 5 -->
           <div class="col-12 col-md-4 col-lg-3">
             <div
-              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
+              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column shadow div-efect"
             >
               <img
                 src="../img/Heladeras/sigma.jpg"
@@ -297,7 +302,7 @@
           <!-- 6 -->
           <div class="col-12 col-md-4 col-lg-3">
             <div
-              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
+              class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column shadow div-efect"
             >
               <img
                 src="../img/Heladeras/patrik.jpg"
@@ -352,6 +357,113 @@
               </li>
             </ul>
           </nav>
+        </div>
+      </section>
+
+            <section>
+        <!-- Modal Login -->
+        <div
+          class="modal fade"
+          id="miModal"
+          tabindex="-1"
+          aria-labelledby="modalLoginLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <!-- Encabezado del modal -->
+              <div class="modal-header">
+                <h5 class="modal-title" id="modalLoginLabel">Iniciar sesión</h5>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Cerrar"
+                ></button>
+              </div>
+
+              <!-- Cuerpo del modal -->
+              <div class="modal-body">
+                <div class="card shadow p-4 rounded-4">
+                  <form>
+                    <!-- Email -->
+                    <div class="mb-3">
+                      <label for="email" class="form-label"
+                        >Correo electrónico</label
+                      >
+                      <input
+                        type="email"
+                        class="form-control"
+                        id="email"
+                        name="email"
+                        placeholder="correo@mail.com"
+                        maxlength="50"
+                        pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
+                        title="Ingresa un correo válido. Ej: ejemplo@mail.com"
+                        autocomplete="email"
+                        required
+                      />
+                    </div>
+
+                    <!-- Contraseña -->
+                    <div class="mb-3">
+                      <label for="password" class="form-label"
+                        >Contraseña</label
+                      >
+                      <input
+                        type="password"
+                        class="form-control"
+                        id="password"
+                        name="password"
+                        placeholder="Contraseña"
+                        minlength="8"
+                        maxlength="20"
+                        pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{8,}$"
+                        title="Debe tener al menos 8 caracteres, una letra, un número y un símbolo"
+                        autocomplete="current-password"
+                        required
+                      />
+                    </div>
+
+                    <!-- Link de recuperación -->
+                    <div class="mb-3 text-end">
+                      <a
+                        href="./pages/error404.html"
+                        class="text-decoration-none"
+                      >
+                        ¿Olvidaste tu contraseña?
+                      </a>
+                    </div>
+
+                    <!-- Botón de inicio de sesión -->
+                    <div class="d-grid">
+                      <button type="submit" class="btn btn-facebook my-1">
+                        Iniciar sesión
+                      </button>
+                      <button type="submit" class="btn btn-facebook my-1">
+                        Iniciar sesión con Google <i class="bi bi-google"></i>
+                      </button>
+                      <button type="submit" class="btn btn-facebook my-1">
+                        Iniciar sesión con Facebook
+                        <i class="bi bi-facebook"></i>
+                      </button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+
+              <!-- Pie del modal-->
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Cancelar
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
