--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -138,7 +138,7 @@
                 />
                 <div class="flex-grow-1 mx-3">
                   <h5>Samsung Galaxy Z Flip 5 5G</h5>
-                  <p>Smartphone Android de última generación.</p>
+                  <p>Un dispositivo que te permita estar en contacto siempre.</p>
                   <p><strong>Precio:</strong> $361.185</p>
                 </div>
                 <div class="d-flex flex-column gap-2">
@@ -162,7 +162,7 @@
                 />
                 <div class="flex-grow-1 mx-3">
                   <h5>Heladera Hisense</h5>
-                  <p>Heladera no frost con freezer independiente.</p>
+                  <p>Heladera negra 511 L, no frost con dispenser y filtro.</p>
                   <p><strong>Precio:</strong> $7.250.445</p>
                 </div>
                 <div class="d-flex flex-column gap-2">
