corregimos la paginacion de la pagina de celulares

--- a/index.html
+++ b/index.html
@@ -598,16 +598,22 @@
 
                     <!-- Botón de inicio de sesión -->
                     <div class="d-grid">
-                      <button type="submit" class="btn btn-facebook my-1">
+                      <a href="./pages/error404.html">
+                        <button type="submit" class="btn btn-facebook my-1">
                         Iniciar sesión
                       </button>
-                      <button type="submit" class="btn btn-facebook my-1">
+                      </a>
+                      <a href="./pages/error404.html">
+                        <button type="submit" class="btn btn-facebook my-1">
                         Iniciar sesión con Google <i class="bi bi-google"></i>
                       </button>
-                      <button type="submit" class="btn btn-facebook my-1">
+                      </a>
+                      <a href="./pages/error404.html">
+                        <button type="submit" class="btn btn-facebook my-1">
                         Iniciar sesión con Facebook
                         <i class="bi bi-facebook"></i>
                       </button>
+                      </a>
                     </div>
                   </form>
                 </div>
